// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input autosize 1`] = `
<Input
  autosize={true}
  disabled={false}
  onChange={[Function]}
  prefixCls="za-input"
  rows={4}
  showLength={false}
  type="textarea"
  value="foo"
>
  <div
    className="za-input"
  >
    <textarea
      className="za-input"
      disabled={false}
      onChange={[Function]}
      rows={4}
      value="foo"
    />
  </div>
</Input>
`;

exports[`Input renders correctly 1`] = `
<div
  class="za-input"
>
  <input
    class="za-input"
    type="text"
  />
</div>
`;

exports[`Input showLength 1`] = `
<div
  class="za-input"
>
  <textarea
    class="za-input"
    maxlength="100"
    rows="4"
  />
  <div
    class="za-input-length"
  >
    0/100
  </div>
</div>
`;

exports[`Input type is date renders correctly 1`] = `
<div
  class="za-input"
>
  <div
    class="za-input-placeholder"
  />
  <input
    class="za-input"
    type="date"
  />
</div>
`;

exports[`Input type is textarea renders correctly 1`] = `
<div
  class="za-input"
>
  <textarea
    class="za-input"
    rows="4"
  />
</div>
`;
